--- a/index.html
+++ b/index.html
@@ -48,5 +48,20 @@
             <dd>hola</dd>
         </dl>
 
+        <img src="./assets/12.png" width="50">
+
+        <br>
+
+        <nav>
+            <a href="index.html">home</a> &nbsp;
+            <a href="about.html">about</a> &nbsp;
+            <a href="#footer">footer</a> &nbsp;
+            <a href="https://finn.no" target="_blank">FINN</a>
+
+        </nav>
+
+        <footer id="footer">
+            footer
+            </footer>
     </body>
 </html>
