--- a/Temaoppgave 2/Second-page.html
+++ b/Temaoppgave 2/Second-page.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="back-icon">
-        <a href="./Front-page.html"><img src="./assets/back.svg" alt="tillbaka"></a>
+        <a href="./index.html"><img src="./assets/back.svg" alt="tillbaka"></a>
     </div>
 
 
