--- a/Temaoppgave 2/index.html
+++ b/Temaoppgave 2/index.html
@@ -24,7 +24,7 @@
             </div>
             <nav class="menu">
                 <div class="menu-item">
-                    <a href="./Front-page.html"> About </a> 
+                    <a href="./index.html"> About </a> 
                 </div>
 
                 <div class="menu-item">
