--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <br>
 
                 
-                <a href="./Second-page.html"><h4 class="h4-2">Reade more</h4></a>
+                <h4 class="h4-2">Reade more</h4>
             </div>
             <div class="card-img-2" alt="Morden design museum Copenhagen">
                 <img src="./assets/Photo danish1.jpg">
