--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <section class="card-2">
             <div class="title3" style="margin-top: 50px">
                 <h1>
-                    MORDEN DESIGN MUSEUM COPENHAGEN
+                    MODERN DESIGN MUSEUM COPENHAGEN
                 </h1>
             </div>
 
