--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                     Lorem, ipsum dolor sit amet consectetur 
                     adipisicing elit. A quisquam laborum 
                     autem natus quasi dolores minima maxime 
-                    quis dignissimos, consectetur cum tenetur 
-                    praesentium. Harum ullam delectus 
-                    fugit at ratione optio?
+                    quis dignissimos.
                 </p>
 
                 <br>
@@ -97,9 +95,7 @@
                     Lorem, ipsum dolor sit amet consectetur 
                     adipisicing elit. A quisquam laborum 
                     autem natus quasi dolores minima maxime 
-                    quis dignissimos, consectetur cum tenetur 
-                    praesentium. Harum ullam delectus 
-                    fugit at ratione optio?
+                    quis dignissimos.
                 </p>
 
                 <br>
@@ -129,9 +125,7 @@
                     Lorem, ipsum dolor sit amet consectetur 
                     adipisicing elit. A quisquam laborum 
                     autem natus quasi dolores minima maxime 
-                    quis dignissimos, consectetur cum tenetur 
-                    praesentium. Harum ullam delectus 
-                    fugit at ratione optio?
+                    quis dignissimos.
                 </p>
                 <br>
                 <div class="card-text-small">
@@ -147,7 +141,8 @@
                         <h6>Modern design museum Copenhagen</h6>
                     </a>
             </div>  
-            <div class="card-3" style="margin-top: 0px; margin-bottom: 50px;">
+            <div class="card-3" style="margin-top: 0px; margin-bottom: 20px;">
+                <a href="/secondPage.html">
                 <p class="text-box">
                     Lorem ipsum dolor sit amet 
                     consectetur adipisicing elit. 
@@ -156,6 +151,11 @@
                     accusantium porro a ad doloremque 
                     exercitationem sequi minima id.
                 </p>
+                <br>
+                <div class="card-text-small-2">
+                    <h4>Read more</h4>
+                </div>
+                </a>
             </div>
             <a href="/secondPage.html">
                 <div class="card-img-2" alt="Morden design museum Copenhagen">
@@ -168,7 +168,7 @@
     <footer class="footer">
         <div class="footer-box layout">   
             <div class="Social-Media">
-                <h4 class="h4">
+                <h4 class="h4" style="font-weight: 600;">
                     Social Media
                 </h4>
                 <p><img class="icon" src="/assets/noun_instagram_.svg" alt="instagram"> arc.chair</p>
@@ -178,7 +178,7 @@
             </div>
 
             <div class="Contact">
-                <h4 class="h4">
+                <h4 class="h4" style="font-weight: 600;">
                     Contact
                 </h4>
                 <p><img class="icon" src="/assets/Phone.svg" alt="telefonummer"> +47 123 11 123</p>
