--- a/secondPage.html
+++ b/secondPage.html
@@ -139,9 +139,9 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="footer-box layout">   
+        <div class="footer-box layout2">   
             <div class="Social-Media">
-                <h4 class="h4">
+                <h4 class="h4" style="font-weight: 600;">
                     Social Media
                 </h4>
                 <p><img class="icon" src="/assets/noun_instagram_.svg" alt="instagram"> arc.chair</p>
@@ -151,7 +151,7 @@
             </div>
 
             <div class="Contact">
-                <h4 class="h4">
+                <h4 class="h4" style="font-weight: 600;">
                     Contact
                 </h4>
                 <p><img class="icon" src="/assets/Phone.svg" alt="telefonummer"> +47 123 11 123</p>
