edit alt on images

--- a/secondPage.html
+++ b/secondPage.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="hero">
-        <img src="/assets/wegner_stole_wide.png" alt="header bilde">
+        <img src="/assets/wegner_stole_wide.png" alt="Modern design museum">
     </header>
     <main class="layout2">
         <h1 class="h1">
@@ -51,7 +51,7 @@
             </p>
         </div>
         <div class="picture">
-            <img src="/assets/Photo danish1.jpg" alt="Bilde av utstilling">
+            <img src="/assets/Photo danish1.jpg" alt="Utställningen">
         </div>
         <div class="card-3">
             <p class="text-box">
@@ -77,8 +77,8 @@
             </p>
         </div>
         <div class="picture-box">
-            <img src="/assets/Photo danish3.png" alt="Boken">
-            <img src="/assets/Photo Danish5.jpg" alt="Utstilling">
+            <img src="/assets/Photo danish3.png" alt="Boken the danish chair">
+            <img src="/assets/Photo Danish5.jpg" alt="Utställningen">
         </div>
         <div class="card-3">
             <p class="text-box">
