--- a/secondPage.html
+++ b/secondPage.html
@@ -5,8 +5,8 @@
         <title>Arc Chair</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
         <meta name="description" content="Temaoppgave 2 Sofia Skärberg, Arc Chair artblog">
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="/css/font.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        
         <link rel="icon" href="./assets/icon stol.png">
     </head>
 
