--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                         <h6>Modern design museum Copenhagen</h6>
                     </a>
             </div>  
-            <div class="card-3" style="margin-top: 0px; margin-bottom: 20px;">
+            <div class="card-4">
                 <a href="/secondPage.html">
-                <p class="text-box">
+                <p class="text-box-2">
                     Lorem ipsum dolor sit amet 
                     consectetur adipisicing elit. 
                     Iusto, culpa. Iusto deleniti 
@@ -157,7 +157,7 @@
                 </a>
             </div>
             <a href="/secondPage.html">
-                <div class="card-img-2" alt="Morden design museum Copenhagen">
+                <div class="card-img-2" style="margin-bottom: 50px;" alt="Morden design museum Copenhagen">
                     <img src="./assets/Photo danish1.jpg">
                 </div>
             </a>
